--- a/index.html
+++ b/index.html
@@ -33,10 +33,29 @@
             <i id="repeat-plist"class="material-icons">repeat</i>
             <i id="prev"class="material-icons">skip_previous</i>
             <div class="play-pause">
-                <div class="material-icons">play_arrow</div>
+                <i class="material-icons">play_arrow</i>
             </div>
             <i id="next"class="material-icons">skip_next</i>
             <i id="more-music"class="material-icons">queue_music</i>
+        </div>
+        <div class="music-list">
+            <div class="header">
+                <div class="row">
+                    <i class="material-icons">queue_music</i>
+                    <span>Music List</span>
+                </div>
+                <i id="close" class="material-icons">close
+                </i>
+            </div>
+            <ul>
+                <li>
+                    <div class="row">
+                        <span>Glee Cast - Jingle Bell Rock</span>
+                        <p>Audio Library</p>
+                    </div>
+                    <span class="audio-duration">4.02</span>
+                </li>
+            </ul>   
         </div>
     </div>
 </body>
