Update mucsic player project

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <img src="/Music-Player/Images/AIWFCIU.PNG" alt="">
         </div>
         <div class="song-details">
-            <p class="name">Mariah Carey - All I Want for Christmas Is You</p>
-            <p class="artist">Mariah Carey</p>
+            <p class="name"></p>
+            <p class="artist"></p>
         </div>
         <div class="progress-area">
             <div class="progress-bar"></div>
@@ -55,8 +55,39 @@
                     </div>
                     <span class="audio-duration">4.02</span>
                 </li>
+                <li>
+                    <div class="row">
+                        <span>Glee Cast - Jingle Bell Rock</span>
+                        <p>Audio Library</p>
+                    </div>
+                    <span class="audio-duration">4.02</span>
+                </li>
+                <li>
+                    <div class="row">
+                        <span>Glee Cast - Jingle Bell Rock</span>
+                        <p>Audio Library</p>
+                    </div>
+                    <span class="audio-duration">4.02</span>
+                </li>
+                <li>
+                    <div class="row">
+                        <span>Glee Cast - Jingle Bell Rock</span>
+                        <p>Audio Library</p>
+                    </div>
+                    <span class="audio-duration">4.02</span>
+                </li>
+                <li>
+                    <div class="row">
+                        <span>Glee Cast - Jingle Bell Rock</span>
+                        <p>Audio Library</p>
+                    </div>
+                    <span class="audio-duration">4.02</span>
+                </li>
             </ul>   
         </div>
     </div>
+
+    <script src="/Music-Player/JS/music-list.js"></script>
+    <script src="/Music-Player/JS/script.js"></script> 
 </body>
 </html>
