update script file

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <i class="material-icons">more_horiz</i>
         </div>
         <div class="img-area">
-            <img src="/Music-Player/Images/AIWFCIU.PNG" alt="">
+            <img src="" alt="">
         </div>
         <div class="song-details">
             <p class="name"></p>
@@ -26,8 +26,10 @@
             <div class="progress-bar"></div>
             <div class="timer">
                 <span class="current">0.20</span>
-                <span class="current">4.02</span>
+                <span class="duration">4.02</span>
             </div>
+            <audio id="main-audio" src=""></audio>
+            
         </div>
         <div class="controls">
             <i id="repeat-plist"class="material-icons">repeat</i>
