--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="/Music-Player/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
+
 <body>
+    <i class="fas fa-snowflake"></i>
     <div class="wrapper">
         <div class="top-bar">
             <i class="material-icons">expand_more</i>
@@ -54,7 +56,7 @@
             </ul>   
         </div>
     </div>
-
+    
     <script src="/Music-Player/JS/music-list.js"></script>
     <script src="/Music-Player/JS/script.js"></script> 
 </body>
